--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">grou</a>
+          <a class="navbar-brand" href="#"><p><img id="ad18" src="images/ad18.png"></p></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
